tests/ui/async-await/in-trait/indirect-recursion-issue-112047.stderr
error[E0733]: recursion in an async fn requires boxing
  --> $DIR/indirect-recursion-issue-112047.rs:31:5
   |
LL |     async fn second(self) {
   |     ^^^^^^^^^^^^^^^^^^^^^
LL |
LL |         self.first().await.second().await;
   |         --------------------------------- recursive call here
   |
   = note: a recursive `async fn` call must introduce indirection such as `Box::pin` to avoid an infinitely sized future

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0733`.
